Allow importing without interlis file

--- a/projectgenerator/ui/generate_project.ui
+++ b/projectgenerator/ui/generate_project.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>800</width>
+    <width>718</width>
     <height>674</height>
    </rect>
   </property>
@@ -14,38 +14,11 @@
    <string>Import Interlis</string>
   </property>
   <layout class="QGridLayout" name="gridLayout">
-   <item row="0" column="0">
-    <widget class="QComboBox" name="comboBox">
-     <property name="enabled">
-      <bool>false</bool>
-     </property>
-     <item>
-      <property name="text">
-       <string>Interlis</string>
-      </property>
-     </item>
-     <item>
-      <property name="text">
-       <string>Postgis</string>
-      </property>
-     </item>
-    </widget>
-   </item>
-   <item row="0" column="1">
-    <spacer name="horizontalSpacer">
-     <property name="orientation">
-      <enum>Qt::Horizontal</enum>
-     </property>
-     <property name="sizeHint" stdset="0">
-      <size>
-       <width>40</width>
-       <height>20</height>
-      </size>
-     </property>
-    </spacer>
-   </item>
    <item row="1" column="0" colspan="2">
     <widget class="QStackedWidget" name="stackedWidget">
+     <property name="currentIndex">
+      <number>0</number>
+     </property>
      <widget class="QWidget" name="page">
       <layout class="QGridLayout" name="gridLayout_3">
        <item row="3" column="0" colspan="2">
@@ -206,10 +179,24 @@
      </property>
     </widget>
    </item>
+   <item row="0" column="0" colspan="2">
+    <widget class="QComboBox" name="type_combo_box">
+     <item>
+      <property name="text">
+       <string>Interlis</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string>Postgis</string>
+      </property>
+     </item>
+    </widget>
+   </item>
   </layout>
  </widget>
  <tabstops>
-  <tabstop>comboBox</tabstop>
+  <tabstop>type_combo_box</tabstop>
   <tabstop>pg_host_line_edit</tabstop>
   <tabstop>pg_user_line_edit</tabstop>
   <tabstop>pg_database_line_edit</tabstop>
