--- a/projectgenerator/ui/generate_project.ui
+++ b/projectgenerator/ui/generate_project.ui
@@ -53,7 +53,11 @@
            </widget>
           </item>
           <item row="4" column="2">
-           <widget class="QLineEdit" name="pg_schema_line_edit"/>
+           <widget class="QLineEdit" name="pg_schema_line_edit">
+            <property name="placeholderText">
+             <string>[Leave empty to load all schemas in the database]</string>
+            </property>
+           </widget>
           </item>
           <item row="4" column="0">
            <widget class="QLabel" name="label_3">
@@ -66,6 +70,9 @@
            <widget class="QLineEdit" name="pg_host_line_edit">
             <property name="text">
              <string>localhost</string>
+            </property>
+            <property name="placeholderText">
+             <string>Database Hostname</string>
             </property>
            </widget>
           </item>
