Minor fixes/updates
+ Update ili2pg to v3.8.0
+ Fix tab order for generate_project.ui
+ Avoid printing field names (it takes time)
+ Fix SQL to get table fields

--- a/projectgenerator/ui/generate_project.ui
+++ b/projectgenerator/ui/generate_project.ui
@@ -233,6 +233,7 @@
   <tabstop>type_combo_box</tabstop>
   <tabstop>ili_file_line_edit</tabstop>
   <tabstop>ili_file_browse_button</tabstop>
+  <tabstop>crsSelector</tabstop>
   <tabstop>ili2pg_options_button</tabstop>
   <tabstop>pg_host_line_edit</tabstop>
   <tabstop>pg_database_line_edit</tabstop>
