--- a/projectgenerator/ui/generate_project.ui
+++ b/projectgenerator/ui/generate_project.ui
@@ -130,21 +130,24 @@
           <string>Interlis</string>
          </property>
          <layout class="QGridLayout" name="gridLayout_5">
-          <item row="0" column="0">
-           <widget class="QLabel" name="label">
+          <item row="4" column="2" colspan="2">
+           <widget class="QPushButton" name="ili2pg_options_button">
             <property name="text">
-             <string>Interlis File</string>
-            </property>
-           </widget>
-          </item>
-          <item row="0" column="3">
-           <widget class="QToolButton" name="ili_file_browse_button">
-            <property name="text">
-             <string>...</string>
+             <string>Advanced Options</string>
             </property>
            </widget>
           </item>
           <item row="1" column="0">
+           <widget class="QLabel" name="label_7">
+            <property name="text">
+             <string>Model</string>
+            </property>
+           </widget>
+          </item>
+          <item row="3" column="1" colspan="3">
+           <widget class="QgsProjectionSelectionWidget" name="crsSelector" native="true"/>
+          </item>
+          <item row="3" column="0">
            <widget class="QLabel" name="crs_label">
             <property name="toolTip">
              <string>Coordinate Reference System</string>
@@ -154,14 +157,27 @@
             </property>
            </widget>
           </item>
-          <item row="2" column="2" colspan="2">
-           <widget class="QPushButton" name="ili2pg_options_button">
+          <item row="1" column="1" colspan="3">
+           <widget class="QLineEdit" name="ili_models_line_edit"/>
+          </item>
+          <item row="2" column="0">
+           <widget class="QLabel" name="label">
             <property name="text">
-             <string>Advanced Options</string>
+             <string>Interlis File</string>
             </property>
            </widget>
           </item>
-          <item row="2" column="1">
+          <item row="2" column="3">
+           <widget class="QToolButton" name="ili_file_browse_button">
+            <property name="text">
+             <string>...</string>
+            </property>
+           </widget>
+          </item>
+          <item row="2" column="1" colspan="2">
+           <widget class="QLineEdit" name="ili_file_line_edit"/>
+          </item>
+          <item row="4" column="1">
            <spacer name="horizontalSpacer">
             <property name="orientation">
              <enum>Qt::Horizontal</enum>
@@ -173,12 +189,6 @@
              </size>
             </property>
            </spacer>
-          </item>
-          <item row="0" column="1" colspan="2">
-           <widget class="QLineEdit" name="ili_file_line_edit"/>
-          </item>
-          <item row="1" column="1" colspan="3">
-           <widget class="QgsProjectionSelectionWidget" name="crsSelector" native="true"/>
           </item>
          </layout>
         </widget>
@@ -231,8 +241,6 @@
  </customwidgets>
  <tabstops>
   <tabstop>type_combo_box</tabstop>
-  <tabstop>ili_file_line_edit</tabstop>
-  <tabstop>ili_file_browse_button</tabstop>
   <tabstop>crsSelector</tabstop>
   <tabstop>ili2pg_options_button</tabstop>
   <tabstop>pg_host_line_edit</tabstop>
