--- a/projectgenerator/ui/export.ui
+++ b/projectgenerator/ui/export.ui
@@ -55,7 +55,7 @@
           <item row="4" column="2">
            <widget class="QLineEdit" name="pg_schema_line_edit">
             <property name="placeholderText">
-             <string>[Leave empty to load all schemas in the database]</string>
+             <string>[Leave empty to export the default schema 'public']</string>
             </property>
            </widget>
           </item>
