--- a/projectgenerator/ui/import_data.ui
+++ b/projectgenerator/ui/import_data.ui
@@ -46,7 +46,7 @@
           <item row="5" column="2">
            <widget class="QLineEdit" name="pg_schema_line_edit">
             <property name="placeholderText">
-             <string>[Leave empty to load all schemas in the database]</string>
+             <string>[Leave empty to import data into a default schema]</string>
             </property>
            </widget>
           </item>
