--- a/projectgenerator/ui/generate_project.ui
+++ b/projectgenerator/ui/generate_project.ui
@@ -135,45 +135,7 @@
           <string>Interlis</string>
          </property>
          <layout class="QGridLayout" name="gridLayout_5">
-          <item row="4" column="3" colspan="2">
-           <widget class="QPushButton" name="ili2pg_options_button">
-            <property name="text">
-             <string>Advanced Options</string>
-            </property>
-           </widget>
-          </item>
-          <item row="1" column="1">
-           <widget class="QLabel" name="label_7">
-            <property name="text">
-             <string>Model</string>
-            </property>
-           </widget>
-          </item>
-          <item row="3" column="2" colspan="3">
-           <widget class="QgsProjectionSelectionWidget" name="crsSelector" native="true">
-            <property name="focusPolicy">
-             <enum>Qt::StrongFocus</enum>
-            </property>
-           </widget>
-          </item>
-          <item row="3" column="1">
-           <widget class="QLabel" name="crs_label">
-            <property name="toolTip">
-             <string>Coordinate Reference System</string>
-            </property>
-            <property name="text">
-             <string>CRS</string>
-            </property>
-           </widget>
-          </item>
-          <item row="2" column="1">
-           <widget class="QLabel" name="label">
-            <property name="text">
-             <string>Interlis File</string>
-            </property>
-           </widget>
-          </item>
-          <item row="2" column="4">
+          <item row="2" column="3">
            <widget class="QToolButton" name="ili_file_browse_button">
             <property name="enabled">
              <bool>false</bool>
@@ -183,14 +145,28 @@
             </property>
            </widget>
           </item>
-          <item row="2" column="2" colspan="2">
+          <item row="4" column="2" colspan="2">
+           <widget class="QPushButton" name="ili2pg_options_button">
+            <property name="text">
+             <string>Advanced Options</string>
+            </property>
+           </widget>
+          </item>
+          <item row="3" column="1" colspan="3">
+           <widget class="QgsProjectionSelectionWidget" name="crsSelector">
+            <property name="focusPolicy">
+             <enum>Qt::StrongFocus</enum>
+            </property>
+           </widget>
+          </item>
+          <item row="2" column="1" colspan="2">
            <widget class="QLineEdit" name="ili_file_line_edit">
             <property name="enabled">
              <bool>false</bool>
             </property>
            </widget>
           </item>
-          <item row="4" column="2">
+          <item row="4" column="1">
            <spacer name="horizontalSpacer">
             <property name="orientation">
              <enum>Qt::Horizontal</enum>
@@ -204,22 +180,35 @@
            </spacer>
           </item>
           <item row="1" column="0">
-           <widget class="QRadioButton" name="radio_button_1">
+           <widget class="QRadioButton" name="model_radio_button">
             <property name="text">
-             <string/>
+             <string>Model</string>
             </property>
             <property name="checked">
              <bool>true</bool>
             </property>
            </widget>
           </item>
-          <item row="1" column="2" colspan="3">
+          <item row="1" column="1" colspan="3">
            <widget class="QLineEdit" name="ili_models_line_edit"/>
           </item>
           <item row="2" column="0">
-           <widget class="QRadioButton" name="radio_button_2">
+           <widget class="QRadioButton" name="interlis_file_radio_button">
             <property name="text">
-             <string/>
+             <string>Interlis File</string>
+            </property>
+           </widget>
+          </item>
+          <item row="3" column="0">
+           <widget class="QLabel" name="crs_label">
+            <property name="toolTip">
+             <string>Coordinate Reference System</string>
+            </property>
+            <property name="text">
+             <string>CRS</string>
+            </property>
+            <property name="alignment">
+             <set>Qt::AlignCenter</set>
             </property>
            </widget>
           </item>
@@ -274,7 +263,9 @@
  </customwidgets>
  <tabstops>
   <tabstop>type_combo_box</tabstop>
+  <tabstop>model_radio_button</tabstop>
   <tabstop>ili_models_line_edit</tabstop>
+  <tabstop>interlis_file_radio_button</tabstop>
   <tabstop>ili_file_line_edit</tabstop>
   <tabstop>ili_file_browse_button</tabstop>
   <tabstop>crsSelector</tabstop>
@@ -286,6 +277,7 @@
   <tabstop>pg_user_line_edit</tabstop>
   <tabstop>pg_password_line_edit</tabstop>
   <tabstop>txtStdout</tabstop>
+  <tabstop>buttonBox</tabstop>
  </tabstops>
  <resources/>
  <connections>
