Add help button to generate - import - export - settings dialogs

--- a/projectgenerator/ui/options.ui
+++ b/projectgenerator/ui/options.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>403</width>
-    <height>300</height>
+    <height>305</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -165,7 +165,7 @@
       <enum>Qt::Horizontal</enum>
      </property>
      <property name="standardButtons">
-      <set>QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>
+      <set>QDialogButtonBox::Cancel|QDialogButtonBox::Help|QDialogButtonBox::Ok</set>
      </property>
     </widget>
    </item>
