--- a/projectgenerator/ui/generate_project.ui
+++ b/projectgenerator/ui/generate_project.ui
@@ -199,7 +199,11 @@
            </widget>
           </item>
           <item row="0" column="1" colspan="2">
-           <widget class="QLineEdit" name="ili_file_line_edit"/>
+           <widget class="QLineEdit" name="ili_file_line_edit">
+            <property name="placeholderText">
+             <string>[Optional]</string>
+            </property>
+           </widget>
           </item>
          </layout>
         </widget>
@@ -252,6 +256,8 @@
  </customwidgets>
  <tabstops>
   <tabstop>type_combo_box</tabstop>
+  <tabstop>ili_file_line_edit</tabstop>
+  <tabstop>ili_file_browse_button</tabstop>
   <tabstop>ili_models_line_edit</tabstop>
   <tabstop>crsSelector</tabstop>
   <tabstop>ili2pg_options_button</tabstop>
