--- a/projectgenerator/ui/import_data.ui
+++ b/projectgenerator/ui/import_data.ui
@@ -207,6 +207,9 @@
           </item>
           <item row="0" column="4">
            <widget class="QToolButton" name="xtf_file_browse_button">
+            <property name="toolTip">
+             <string>Browse XTF files</string>
+            </property>
             <property name="text">
              <string>...</string>
             </property>
@@ -216,6 +219,16 @@
            <widget class="QCheckBox" name="chk_delete_data">
             <property name="text">
              <string>Delete existing data in affected tables</string>
+            </property>
+           </widget>
+          </item>
+          <item row="1" column="4">
+           <widget class="QToolButton" name="multiple_models_button">
+            <property name="toolTip">
+             <string>Select multiple Interlis models</string>
+            </property>
+            <property name="text">
+             <string>...</string>
             </property>
            </widget>
           </item>
@@ -247,6 +260,9 @@
           </item>
           <item row="0" column="3">
            <widget class="QToolButton" name="gpkg_file_browse_button">
+            <property name="toolTip">
+             <string>Browse GeoPackage files</string>
+            </property>
             <property name="text">
              <string>...</string>
             </property>
@@ -273,9 +289,11 @@
   </layout>
  </widget>
  <tabstops>
+  <tabstop>type_combo_box</tabstop>
   <tabstop>xtf_file_line_edit</tabstop>
   <tabstop>xtf_file_browse_button</tabstop>
   <tabstop>ili_models_line_edit</tabstop>
+  <tabstop>multiple_models_button</tabstop>
   <tabstop>chk_delete_data</tabstop>
   <tabstop>pg_host_line_edit</tabstop>
   <tabstop>pg_port_line_edit</tabstop>
