Extra Model Information File
Is the name the user sees for the toml-file so he understands what it's about.

--- a/projectgenerator/ui/ili2db_options.ui
+++ b/projectgenerator/ui/ili2db_options.ui
@@ -75,7 +75,7 @@ strategy. Concrete classes are mapped using a NewAndSubClass strategy.</string>
       <item row="0" column="0">
        <widget class="QLabel" name="toml_file_label">
         <property name="text">
-         <string>Meta Attributes File</string>
+         <string>Extra Model Information File</string>
         </property>
        </widget>
       </item>
